<resources>
    <string name="app_name">MercadoLibreAPP</string>
    <string name="ingresar_datos">Ingresa tu teléfono, e-mail o \nusuario</string>
    <string name="titulo1">Télefono, e-mail o usuario</string>
    <string name="continuar">Continuar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ayuda_ingresar">Necesito ayuda para ingresar</string>
    <string name="email">Email</string>
    <string name="phone">Numero</string>
    <string name="password">Contraseña</string>
    <string name="identity">Identidad</string>
    <string name="vacio">.</string>
    <string name="your_password_text">Ahora, tu clave de \nMercado Libre</string>
    <string name="your_password">Clave</string>
    <string name="login">Ingresar</string>
    <string name="dont_know_password">No sé mi clave</string>
    <string name="board">Para crear tu cuenta \n necesitamos algunos datos</string>
    <string name="board2">Solo te tomará unos minutos.</string>
    <string name="ifuser">Si tienes una cuenta en mercado libre, no necesitas crear una nueva,Inicia sesion con ese mismo e-mail.</string>
    <string name="level">Nivel - Mercado puntos ></string>
    <string name="hello">Hola Mr....</string>
    <string name="ubication">Ingresa tu ubicacion ></string>
    <string name="qr">Pagar con QR</string>
    <string name="offer">Ofertas</string>
    <string name="supermarket">Supermercado</string>
    <string name="car">Carros,motos y otros</string>
    <string name="plus">Ver más</string>
    <string name="cardText1">Visto recientemente</string>
    <string name="hpinfo">Laptop Hp 11a,11.6 Hd, Celeron</string>
    <string name="hpinfo2">N3350, 4 Gb De Ram, 32 Gb ...</string>
    <string name="hpvalue">$ 781.568</string>
    <string name="hpfree">Envio gratis</string>
    <string name="watchHistory">Ver historial de navegacion    ></string>
    <string name="mercado">Mercado Pago</string>
    <string name="recargar">Recargar celular</string>
    <string name="billetera">Billetera</string>
    <string name="descubre">Descubre</string>
    <string name="todascategorias">Todas las categorias</string>
    <string name="search">Buscar en Mercado Libre</string>
    <string name="i_am_not">No soy {e-mail}</string>
    <string name="cart">Carrito (0)</string>
    <string name="SharedPreference">MercadoLibre</string>
    <string name="Status">Status</string>
    <string name="Identificacion">Identificacion</string>
    <string name="Email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_bell">Notificaciones</string>
    <string name="menu_shop">Mis compras</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_offer">Ofertas</string>
    <string name="menu_movies">Peliculas y series</string>
    <string name="menu_history">Historial</string>
    <string name="menu_user">Mi cuenta</string>
    <string name="menu_help">Ayuda / PQR</string>
    <string name="menu_super">Supermercado</string>
    <string name="menu_moda">Moda</string>
    <string name="menu_world">Compra Internacional</string>
    <string name="menu_shops">Tiendas oficiales</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_sheet">Resumen</string>
    <string name="menu_buy">Vender</string>
    <string name="menu_shops2">Mercado Shops</string>
    <string name="greeting">Hola</string>
    <string name="location">Ingresa tu ubicacion ></string>
    <string name="susdisney">Suscribete al nivel 6 por $ 46.645/mes</string>
    <string name="enviocar">Envio gratis</string>
    <string name="enviocar2">en millones de productos</string>
    <string name="envios">Envios gratis y rapidos desde \n $70.000 y 40% OFF en envios de \n menos de $70.000</string>
    <string name="desc">Mas descuentos con Mercado Pago</string>
    <string name="sus">Suscribete</string>
    <string name="categorias">Categorias</string>
    <string name="celulares">Celulares y Telefonos</string>
    <string name="computacion">Computacion</string>
    <string name="belleza">Belleza y Cuidado Personal</string>
    <string name="electronica">Electronica,Audio y Video</string>
    <string name="deportes">Deportes y Fitness</string>
    <string name="carros">Carros,Motos y Otros</string>
    <string name="vercategorias">Ver todas las categorias</string>
    <string name="IP">192.168.20.89</string>
</resources>