<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/show_menu"
    android:background="@drawable/border_showmenu"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pronova"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/mercado"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="35dp">

                <ImageButton
                    android:id="@+id/btnqr2"
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/border_list2"
                    app:srcCompat="@drawable/ic_bx_qr"
                    tools:ignore="SpeakableTextPresentCheck"
                    app:tint="@color/blue_light" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/qr"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <ImageButton
                    android:id="@+id/btnphone"
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:background="@drawable/border_list2"
                    app:srcCompat="@drawable/ic_phonr"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/recargar"
                    android:textAlignment="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <ImageButton
                    android:id="@+id/btnbilletera"
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:background="@drawable/border_list2"
                    app:srcCompat="@drawable/ic_wallet"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/billetera"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pronova"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/descubre"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17dp"/>

</LinearLayout>